[package]
name = "zz"
version = "0.1.1"
authors = ["Arvid E. Picciani <aep@exys.org>"]
edition = '2018'
license = "MIT/Apache-2.0"
description = "the zz language"
repository = "https://github.com/aep/zz"
readme = "README.md"


[[bin]]
name = "zz"
path = "src/main.rs"


[lib]
name = "zz"
path = "src/lib.rs"

[dependencies]
pest = "2.1"
pest_derive = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml  = "0.5"
metrohash = "1.0.6"
clap = "2"
log = "0.4"
env_logger = "0.6"
pbr = "1.0.1"
rayon = "1.1.0"
tempdir = "0.3"
which = "3.1.0"
askama = "0.9"
getrandom = "0.1.14"
lazy_static = "1.4.0"
serde_cbor = "0.11.1"
sha2 = "0.8"
reqwest = "0.10.4"
url = "2.1.1"

[dependencies.rsmt2-zz]
version = "0.11.1"

